--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,14 @@ a {
     background: black;
   } */
 }
+
+.simpleBorder {
+  border-style: solid;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
+}
+
