planned out entire structure i believe. detailed in notes

--- a/components/Audio/Song/SongSubcomponents/SongSubcomponentLayout.module.scss
+++ b/components/Audio/Song/SongSubcomponents/SongSubcomponentLayout.module.scss
@@ -5,6 +5,7 @@
         border-style: solid;
         border-width: 2px;
         overflow: hidden;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
         // display: grid;
         // grid-template-columns: 1fr;
         // grid-template-rows: 50px 1fr;
