worked on custom hooks, and the file version section. edited readme and notes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,3 +40,9 @@ a {
   /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; */
 }
 
+.removeListStyleAndAddPointerCursor {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  cursor: pointer;
+}
