--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
 
 
 html,
@@ -8,7 +9,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-family: 'Roboto Mono', monospace;
+    font-family: 'Poppins', sans-serif;
+
     /* font-family: 'IBM Plex Mono', monospace; */
+    /* background-color: #000000; */
+    /* color: #2A2356; */
+    /* color: aqua; */
 
 }
 
@@ -46,3 +52,10 @@ a {
   margin: 0px;
   cursor: pointer;
 }
+
+
+/* baby blue: 6ECBF5
+ultramarine blue: 586AE2
+russion violet: 2A2356
+medium orchid: C252E1
+white ffffff */
