--- a/components/Audio/AudioLayout/AudioNav/_AudioNav.module.scss
+++ b/components/Audio/AudioLayout/AudioNav/_AudioNav.module.scss
@@ -1,11 +1,43 @@
+@use '../../../Audio/audioStyles.module.scss';
+
+// @mixin gradientBackground {
+
+//     // background: rgb(194,82,225);
+//     // background: linear-gradient(90deg, rgba(194,82,225,1) 0%, rgba(110,203,245,1) 50%);
+
+//     background: rgb(194,82,225);
+//     background: linear-gradient(90deg, rgba(194,82,225,1) 0%, rgba(110,203,245,1) 88%);
+
+
+
+//     // background: rgb(110,203,245);
+//     // background: linear-gradient(90deg, rgba(110,203,245,1) 0%, rgba(101,113,251,1) 100%);
+
+//     // background: rgb(176,27,27);
+//     // background: linear-gradient(90deg, rgba(176,27,27,1) 0%, rgba(255,91,91,1) 100%);
+    
+// }
+
+
 .container {
-    background: rgb(194,82,225);
-    background: linear-gradient(90deg, rgba(194,82,225,1) 0%, rgba(110,203,245,1) 50%);
-    border-radius: 10px;
-    margin: 10px;
-    margin-bottom: 50px;
+    @include audioStyles.defaultTheme;
+    // @include 
+    
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; // #2
+    
+    
+    // margin-bottom: 50px;
+    // max-width: 1000px;
+    margin: auto;
+    // margin-top: 10px;
+    // margin-bottom: 10px;
+    @media (max-width: 1000px) { 
+        margin: 10px;
+        
+    }
+
     nav {
+        width: 100%;
         height: 100%;
         display: grid;
         grid-template-columns: 100px 1fr 100px;
@@ -93,7 +125,7 @@
         
     }
     &:active {
-        transition: box-shadow .25s;
+        // transition: box-shadow .25s;
         // border-style: solid;
         // border-width: 1px;
         // border-color: white;
