--- a/components/Audio/Studio/Styles/Studio.module.scss
+++ b/components/Audio/Studio/Styles/Studio.module.scss
@@ -1,14 +1,26 @@
+// @use '../../AudioLayout/AudioNav/AudioNav.module.scss';
+@use '../../../Audio/audioStyles.module.scss';
+
+// $pink: #c252e1;
+// $blue: #6ecbf5;
+
+
 .mainContainer {
     width: 100vw;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -10px;
 
     ul {
-        // width: 100%;
-        list-style: none;
-        margin: 0px;
+        // @include audioStyles.gradientBackground;
+        @include audioStyles.defaultTheme;
+
+        
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; // #2
+
+        
+        
         padding: 0px;
         // background-color: rgb(221, 221, 221);
         display: grid;
@@ -18,11 +30,17 @@
         @media (min-width: 750px) { 
             grid-template-columns: 1fr 1fr 1fr 1fr;
         }
+        // max-width: 1000px;
         // @media (min-width: 1000px) { 
         //     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         // }
         .addNewSongButton {
             border-radius: 10px;
+            background-color:  rgba(255, 255, 255, 0);
+            &:hover {
+                background-image: none;
+                background-color:  rgb(255, 255, 255);
+            }
             
             // box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; // #2
         }
@@ -32,16 +50,9 @@
             height: 100px;
             cursor: pointer;
             background-color: white;
-            // // background-color: aqua;
-            // border-style: solid;
-            // border-width: 2px;
-            // border-color: rgba(0, 0, 0, 0.518);
-            box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; // #2
-            box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
             
-            // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            // width: 200px;
-            // height: 100px;
+            // box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; // #2
+            box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 
             border-radius: 10px;
 
@@ -51,29 +62,23 @@
             justify-content: center;
             align-items: center;
 
-            // max-width: ;
-            // white-space: nowrap;
             overflow:hidden;
-            // text-overflow: ellipsis;
             overflow-wrap: break-word;
-            // hyphens: manual;
-            p {
-                /* max-width: 100%; */
-                /* background-color: aqua; */
-              }
 
             &:hover {
-                background-color:  rgba(110, 202, 245, 0.135);
+                // transition: color .25s;
+                // color: white;
+                // background-color:  rgba(110, 202, 245, 0.135);
+                background-color:  rgba(255, 255, 255, 0.302);
+                // background-color: black;
+                // background-image: url('https://media0.giphy.com/media/bcAXnpZhenJA5McqfL/giphy.gif?cid=ecf05e470gnzcb364bfr08g5iyp2qo2yc0ebwsda1w9cegui&rid=giphy.gif&ct=g');
+                // background-size: cover;
+                // background-position: center;
             }
-            
-
-            svg {
-                // fill: rgb(0, 255, 0);
-                // border-style: solid;
-                // border-radius: 50%;
-                // border-width: 2px;
-                // border-color: rgb(66, 66, 66);
-
+            &:active {
+                box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+                // box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
             }
         }
     }
