--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    font-family: 'Roboto Mono', monospace;
+    /* font-family: 'Roboto Mono', monospace; */
     font-family: 'Poppins', sans-serif;
-
     /* font-family: 'IBM Plex Mono', monospace; */
     /* background-color: #393939; */
     /* color: #2A2356; */
