--- a/components/Audio/Studio/Styles/ManageTeam.module.scss
+++ b/components/Audio/Studio/Styles/ManageTeam.module.scss
@@ -3,7 +3,46 @@
 .container {
 
     @include audioStyles.defaultTheme;
-    
+
     width: 100%;
+    // padding: 50px;
+    // margin: 10px;
+
+    max-width: 1000px;
+    // border-radius: 10px;
+    // margin: 10px;
+    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    @media (max-width: 1000px) { 
+        margin: 10px;
+        
+    }
+    form {
+        background-color: aqua;
+        padding: 10px;
+        margin: 10px;
+        border-radius: 10px;
+        background-color: white;
+        
+    }
+    ul {
+        list-style: none;
+        margin: 0px;
+        padding: 10px;
+        ul {
+            margin: 0px;
+            padding: 0;
+        }
+        .userListItem {
+            border-radius: 10px;
+            padding: 10px;
+            
+            background-color: white;
+            &:not(:last-child) {
+                margin-bottom: 10px;
+            }
+        }
+    }
 
 }
