scss for manage team mostly buttons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,7 +26,9 @@ a {
 * {
   /* box-sizing: border-box; */
 }
-
+button {
+  font-family: 'Poppins', sans-serif;
+}
 @media (prefers-color-scheme: dark) {
   /* html {
     color-scheme: dark;
