--- a/components/Audio/Studio/Styles/ManageTeam.module.scss
+++ b/components/Audio/Studio/Styles/ManageTeam.module.scss
@@ -1,5 +1,7 @@
 @use '../../audioStyles.module.scss';
 
+$red: rgba(255,91,91,1);
+
 .container {
 
     @include audioStyles.defaultTheme;
@@ -7,40 +9,92 @@
     width: 100%;
     // padding: 50px;
     // margin: 10px;
-
+    // background-color: aqua;
     max-width: 1000px;
     // border-radius: 10px;
     // margin: 10px;
-    margin: 10px;
-    margin-top: 10px;
+    // margin: 10px;
+    margin-top: -10px;
     margin-bottom: 10px;
-    @media (max-width: 1000px) { 
-        margin: 10px;
+    // @media (max-width: 1000px) { 
+    //     margin: 0px;
         
-    }
+    // }
+    margin: 0px;
     form {
         background-color: aqua;
         padding: 10px;
         margin: 10px;
+        margin-bottom: 0px;
         border-radius: 10px;
         background-color: white;
         
     }
-    ul {
-        list-style: none;
+    .userList {
+        // list-style: none;
         margin: 0px;
         padding: 10px;
         ul {
+            list-style: none;
             margin: 0px;
             padding: 0;
         }
         .userListItem {
             border-radius: 10px;
             padding: 10px;
-            
             background-color: white;
             &:not(:last-child) {
                 margin-bottom: 10px;
+            }
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            .actionButtons {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                // height: 100px;
+            }
+            .removeAction {
+                border-style: solid;
+                border-width: 2px;
+                border-color: rgba(255,91,91,1);
+                border-radius: 10px;
+                // margin: 10px;
+                // padding: 3px;
+                
+                // background-color: red;
+            }
+            .removeAccess {
+                border-color:white;
+                background-color: $red;
+                padding: 12px;
+                color: white;
+                svg {
+                    fill: white;
+                    
+                }
+            }
+            button {
+                // min-height: 100px;
+                padding: 10px;
+                color: $red;
+                background-color: white;
+                border-style: none;
+                // background-color: green;
+                // margin: 10px;
+                margin-left: 10px;
+                // gap: 10px;
+                // display: flex;
+                // flex-direction: column;
+                svg {
+                    fill: $red;
+                    
+                }
+                p {
+                    margin: 0px;
+                    padding: 0px;
+                }
             }
         }
     }
