--- a/components/Audio/Studio/Styles/ManageTeam.module.scss
+++ b/components/Audio/Studio/Styles/ManageTeam.module.scss
@@ -42,6 +42,49 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
             margin: 0px;
             padding: 0;
         }
+        .addUserButtonContainer {
+            display: flex;
+            // flex-direction: column;
+
+
+            cursor: pointer;
+            // align-items: flex-end;
+            // justify-content: flex-end;
+
+
+
+            // width: 100px;
+            // padding-top: 10px;
+            background-color: #ffffff00;
+            div {
+                min-width: 150px;
+                box-shadow: $subtle-shadow;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                border-radius: 10px;
+                padding: 10px;
+                // color: white;
+
+                // background-color: $blue;
+    
+                svg {
+                    padding-top: 10px;
+                    // fill: white;
+                    // margin-bottom: -10px;
+                }
+                p {
+                    padding-bottom: 10px;
+                    // padding: 0px;
+                    
+                    margin: 0px;
+                }
+            }
+            
+            
+            
+        }
         .userListItem {
             overflow: scroll;
             border-radius: 10px;
@@ -56,10 +99,14 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
                 display: flex;
                 align-items: center;
                 gap: 20px;
+                // font-weight: 200;
+                // background-color: rgb(0, 0, 0);
 
                 .nextImageWrapper {
                     width: 100px;
                     height: 100px;
+                    min-width: 100px;
+                    min-height: 100px;
                     position: relative;
                     border-radius: 50%;
                     overflow: 'hidden';
