--- a/components/Audio/Studio/Styles/Session.module.scss
+++ b/components/Audio/Studio/Styles/Session.module.scss
@@ -98,9 +98,15 @@ $blue: #6ecbf5;
                 
                 display: grid;
                 width: 100%;
-                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
                 
                 grid-template-rows: 1fr;
+                @media (max-width: 400px) { 
+                    // background-color: #6ecbf5;
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-rows: 1fr 1fr;
+                    
+                }
                 background-color: rgb(53, 139, 214);
                 // color: aqua;
                 // display: none;
@@ -126,6 +132,7 @@ $blue: #6ecbf5;
                             fill: white;
                         }
                     }
+                    
                 }
             }
         }
