scss for adding new user form

--- a/components/Audio/Studio/Styles/Studio.module.scss
+++ b/components/Audio/Studio/Styles/Studio.module.scss
@@ -15,6 +15,7 @@
     ul {
         // @include audioStyles.gradientBackground;
         @include audioStyles.defaultTheme;
+        // margin-top: 20px;
 
         
         box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; // #2
