--- a/components/Audio/AudioLayout/AudioNav/_AudioNav.module.scss
+++ b/components/Audio/AudioLayout/AudioNav/_AudioNav.module.scss
@@ -31,8 +31,8 @@
     // max-width: 1000px;
     margin: auto;
     
-    // margin-top: 10px;
-    // margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     @media (max-width: 1000px) { 
         margin: 10px;
         
