--- a/components/Audio/Studio/Styles/ManageTeam.module.scss
+++ b/components/Audio/Studio/Styles/ManageTeam.module.scss
@@ -25,12 +25,95 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
     // }
     margin: 0px;
     form {
+        // @include audioStyles.flexCenterCenter;
         background-color: aqua;
-        padding: 10px;
-        margin: 10px;
-        margin-bottom: 0px;
+        padding: 40px;
+        // margin: 10px;
+        margin-bottom: 10px;
         border-radius: 10px;
         background-color: white;
+        min-height: 200px;
+
+        // height: 300px;
+        display: flex;
+        flex-direction: column;
+        // justify-content:space-around;
+        // justify-items: center;
+        align-items: flex-start;
+        font-size: 20px;
+        font-weight: 600;
+        // min-width: 100%;
+        width: 300px;
+        // width: ;
+        margin-left: auto;
+        margin-right: auto;
+        @media (max-width: 450px) { 
+            // min-width: 200px;
+            width: auto;
+        }
+        gap: 20px;
+        // pa
+        div {
+            @include audioStyles.flexCenterCenter;
+
+            // display: flex;
+            // fle
+            // justify-content: ;
+            
+            input[type=text] {
+                border-style: solid;
+                border-radius: 10px;
+                border-width: 1px;
+                width: 100%;
+                padding-left: 20px;
+                margin-left: 20px;
+                // padding-right: 40px;
+                font-size: 20px;
+                color:rgb(51, 51, 51);
+                // font-family: 'Courier New', Courier, monospace;
+                // background-color: #6ecbf5;
+            }
+            input[type=checkbox] {
+                width: 100px;
+                // border-radius: 50%;
+                // border-width: 20px;
+            }
+        }
+        
+        input {
+            height: 50px;
+        }
+        button {
+            // height: 50px;
+            background-color: $blue;
+            border-style: none;
+            border-radius: 10px;
+            padding: 20px;
+            margin: 10px;
+            color: white;
+            cursor: pointer;
+            box-shadow: $subtle-shadow;
+            // width: 200px;
+            align-self: center;
+            font-size: 20px;
+            &:hover {
+                &:hover {
+                    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(255, 255, 255) 0px 0px 0px 3px;
+                }
+                &:active {
+                    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+                    
+                }
+            }
+        }
+        .cancelNewUser {
+            background-color: white;
+            color: #6ecbf5;
+            &:hover {
+                box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px,$red 0px 0px 0px 3px;
+                color: $red;
+            }
+        }
         
     }
     .userList {
@@ -84,9 +167,14 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
                     margin: 0px;
                 }
                 &:hover {
-                    background-color: white;
-                    svg { fill: black;}
-                    p { color: black;}
+                    // background-color: white;
+                    // svg { fill: black;}
+                    // p { color: black;}
+                    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(255, 255, 255) 0px 0px 0px 3px;
+                }
+                &:active {
+                    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+                    
                 }
             }
             
@@ -106,6 +194,12 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            @media (max-width: 700px) { 
+                flex-direction: column;
+                justify-content: center;
+                // align-items: center;
+                
+            }
 
             .idCard {
                 display: flex;
@@ -137,6 +231,7 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
                     padding-left: 10px;
                     margin: 5px;
                     border-color: $blue;
+                    // border-color: black;
                     
                     // background-color: #6ecbf5;
                 }
@@ -147,7 +242,7 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
                 display: flex;
                 flex-direction: row;
                 // align-items: center;
-                align-self: flex-end;
+                // align-self: flex-end;
                 // background-color: #c252e1;
                 @media (max-width: 400px) { 
                     width: 100%;
@@ -207,7 +302,7 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
                 // background-color: green;
                 // margin: 10px;
                 margin-left: 10px;
-                @media (max-width: 400px) { 
+                @media (max-width: 700px) { 
                     margin-left: 0px;
                     margin: 10px;
                     // width: 100%;
