--- a/components/Audio/Studio/Styles/Session.module.scss
+++ b/components/Audio/Studio/Styles/Session.module.scss
@@ -1,6 +1,9 @@
 @use '../../audioStyles.module.scss';
 
+$red: rgba(255,91,91,1);
+$pink: #c252e1;
 $blue: #6ecbf5;
+$subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 
 .container {
     // margin: auto;
@@ -98,13 +101,14 @@ $blue: #6ecbf5;
                 
                 display: grid;
                 width: 100%;
-                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr;
                 
                 grid-template-rows: 1fr;
+                
                 @media (max-width: 400px) { 
                     // background-color: #6ecbf5;
-                    grid-template-columns: 1fr 1fr;
-                    grid-template-rows: 1fr 1fr;
+                    grid-template-columns: 1fr;
+                    // grid-template-rows: 1fr 1fr;
                     
                 }
                 background-color: rgb(53, 139, 214);
@@ -126,13 +130,29 @@ $blue: #6ecbf5;
                     }
                     &:hover {
                         transition: background-color .5s, color .5s;
-                        background-color: black;
+                        // background-color: black;
+                        // background-color: rgb(132, 132, 132);
+                        // color: white;
+                        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+                        svg {
+                            // fill: white;
+                        }
+                    }
+                    &:active {
+                        // box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+                        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+                    }
+                    
+                }
+                .sectionOpen {
+                    transition: background-color .5s, color .5s;
+                        // background-color: black;
+                        box-shadow: none;
+                        background-color: $blue;
                         color: white;
                         svg {
                             fill: white;
                         }
-                    }
-                    
                 }
             }
         }
