--- a/components/Audio/audioStyles.module.scss
+++ b/components/Audio/audioStyles.module.scss
@@ -10,8 +10,8 @@
 
 
 
-    // background: rgb(110,203,245);
-    // background: linear-gradient(90deg, rgba(110,203,245,1) 0%, rgba(101,113,251,1) 100%);
+    background: rgb(110,203,245);
+    background: linear-gradient(90deg, rgba(110,203,245,1) 0%, rgba(101,113,251,1) 100%);
 
     // background: rgb(176,27,27);
     // background: linear-gradient(90deg, rgba(176,27,27,1) 0%, rgba(255,91,91,1) 100%);
@@ -26,6 +26,7 @@
     @include gradientBackground;
     border-radius: 10px;
     margin: 10px;
+    // margin-top: 40px;
     list-style: none;
     max-width: 1000px;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; // #2
