done except for the home and profile parts

--- a/components/Audio/audioStyles.module.scss
+++ b/components/Audio/audioStyles.module.scss
@@ -26,6 +26,7 @@
     @include gradientBackground;
     border-radius: 10px;
     margin: 10px;
+    // margin: 50px;
     // margin-top: 40px;
     list-style: none;
     max-width: 1000px;
