--- a/components/Audio/Studio/Styles/FileVersion.module.scss
+++ b/components/Audio/Studio/Styles/FileVersion.module.scss
@@ -18,6 +18,7 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
     box-shadow: rgba(0, 0, 0, 0.537) 0px 3px 8px;
     width: 100%;
     // margin-top: 10px;
+    // max-height: 100px;
     h1 {
         margin: 5px;
         padding: 10px;
@@ -50,6 +51,7 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
     audio {
         // height: 200px;
         width: 100%;
+        
         // border-radius: 10px;
     }
 
@@ -64,16 +66,18 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
             margin-top: 2px;
             
             width: 100%;
-            resize: none;
+            // resize: none;
             padding: 20px;
             // margin: 10px;
             border-radius: 10px;
             // width: 50ch;
             // border-style: solid;
+            box-shadow: $subtle-shadow;
             // border-width: 2px;
             font-size: 16px;
             border: 2px solid white;
             background-color:#f6f6f6;
+            // box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
             &:focus {
                 outline: none !important;
                 border:2px solid $pink;
@@ -87,14 +91,15 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
         margin-top: 10px;
         // margin: 10px;
         // margin: 0px;
+        cursor: default;
         ul { margin: 0px; padding: 0px;}
         .pastFileVersionsListItem {
             color: #1f1f1f;
             margin-top: 10px;
-            box-shadow: $subtle-shadow;
+            // box-shadow: $subtle-shadow;
             border-radius: 10px;
             padding: 20px;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.533);
             // margin: 10px;
             h1 {
                 font-size: 16px;
