--- a/components/Audio/Studio/Styles/Session.module.scss
+++ b/components/Audio/Studio/Styles/Session.module.scss
@@ -24,8 +24,8 @@ $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0p
         align-items: center;
         justify-content:space-between;
         cursor: default;
-        position: sticky;
-        top: 0px;
+        // position: sticky;
+        // top: 0px;
         background-color: white;
         border-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.537) 0px 3px 8px;
