--- a/components/Audio/ProfileFolder/Profile.module.scss
+++ b/components/Audio/ProfileFolder/Profile.module.scss
@@ -7,8 +7,28 @@ $grey: rgb(51, 51, 51);
 $subtle-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 $button-hover-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 
-.container {
+.profileContainer {
     @include audioStyles.defaultTheme;
+    background-color: #c252e1;
+    // margin-left: auto
+    margin: auto;
+    
+    // margin-top: 10px;
+    // margin-bottom: 10px;
+    // width: 300px;
+    @media (max-width: 1000px) { 
+        margin: 10px;
+        width: auto;
+        
+    }
+}
+
+.container {
+    // @include audioStyles.defaultTheme;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: column;
     padding: 10px;
     ul {
         padding: 0px;
@@ -18,7 +38,7 @@ $button-hover-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0
     }
     h1 {
         font-size: 20px;
-        font-weight: 400;
+        // font-weight: 400;
     }
     .signOutButton {
         
