ready for deployment

--- a/components/Audio/audioStyles.module.scss
+++ b/components/Audio/audioStyles.module.scss
@@ -5,8 +5,8 @@
     // background: rgb(194,82,225);
     // background: linear-gradient(90deg, rgba(194,82,225,1) 0%, rgba(110,203,245,1) 50%);
 
-    background: rgb(194,82,225);
-    background: linear-gradient(90deg, rgba(194,82,225,1) 0%, rgba(110,203,245,1) 88%);
+    // background: rgb(194,82,225);
+    // background: linear-gradient(90deg, rgba(194,82,225,1) 0%, rgba(110,203,245,1) 88%);
 
 
 
